fix spacing of play and pause button

--- a/css/index-combined-navigation-autoplay.css
+++ b/css/index-combined-navigation-autoplay.css
@@ -172,7 +172,7 @@ body {
   overflow: hidden;
   text-overflow: ellipsis;
   color: white;
-  letter-spacing: 0.05rem;
+  letter-spacing: 0.04rem;
   margin-left: 10px;
   margin-right: 10px;
   /* same text shadow as pencil and title-row-bottom text */
@@ -617,6 +617,8 @@ body {
   background-size: 23px 23px;
   background-image: url("../assets/64x64_0022_down-arrow-white.png");
   background-position: center 58%;
+  position: relative;
+  top: 1px;
 }
 
 /* Increases the clickable area of navigation arrow buttons to prevent accidently turning the title row on or off */
